add splash screen

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,12 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.android">
     <application android:icon="@drawable/icon" android:label="AndroidMaps" android:debuggable="true">
 
-        <activity android:name="com.androidMaps.screens.SpeedScreen">
+        <activity android:name="com.androidMaps.screens.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.androidMaps.screens.MapScreen">
+
+        </activity>
+        <activity android:name="com.androidMaps.interfaces.Screen"/>
 
         <uses-library android:name="com.google.android.maps"/>
 
